concord-cli: fix "Unable to load cache item" error when running on Java 9+