@@ -141,6 +141,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>${main.class}</Main-Class>
+                                        <Add-Opens>java.base/java.lang</Add-Opens>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
